--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "nethack-343-src.tgz": c26537093c38152bc0fbcec20468d975b35f59fd
+  nethack-361-src.tgz: 006fc177206f68375a87e17371de5d86555c329f
