--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   "nethack-343-src.tgz": c26537093c38152bc0fbcec20468d975b35f59fd
+  nethack-367-src.tgz: fa5b392da72736c8030cd3b6f226d0b4fa317518
